// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`div (float) > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "div",
      },
    ],
    "instruction": "module",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "input1",
      },
    ],
    "instruction": "float",
    "isMemoryDeclaration": true,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 2,
    "lineNumberBeforeMacroExpansion": 2,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "input2",
      },
    ],
    "instruction": "float",
    "isMemoryDeclaration": true,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 3,
    "lineNumberBeforeMacroExpansion": 3,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "float",
    "isMemoryDeclaration": true,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 4,
    "lineNumberBeforeMacroExpansion": 4,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 8,
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 6,
    "lineNumberBeforeMacroExpansion": 6,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "input1",
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 7,
    "lineNumberBeforeMacroExpansion": 7,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "input2",
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 8,
    "lineNumberBeforeMacroExpansion": 8,
  },
  {
    "arguments": [],
    "instruction": "ensureNonZero",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 9,
    "lineNumberBeforeMacroExpansion": 9,
  },
  {
    "arguments": [],
    "instruction": "div",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 10,
    "lineNumberBeforeMacroExpansion": 10,
  },
  {
    "arguments": [],
    "instruction": "store",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 11,
    "lineNumberBeforeMacroExpansion": 11,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 13,
    "lineNumberBeforeMacroExpansion": 13,
  },
]
`;

exports[`div (float) > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    (local f32)
    i32.const 8
    i32.const 0
    f32.load
    i32.const 4
    f32.load
    local.set 0
    local.get 0
    f32.const 0x0p+0 (;=0;)
    f32.eq
    if  ;; label = @1
      f32.const 0x1p+0 (;=1;)
      local.set 0
    end
    local.get 0
    f32.div
    f32.store)
  (export "test" (func 0)))
"
`;

exports[`div (float) > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "input1": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "id": "input1",
    "isInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "float",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "input2": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "input2",
    "isInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "float",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 8,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "float",
    "wordAlignedAddress": 2,
    "wordAlignedSize": 1,
  },
}
`;

exports[`div (int) > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "div",
      },
    ],
    "instruction": "module",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "input1",
      },
    ],
    "instruction": "int",
    "isMemoryDeclaration": true,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 2,
    "lineNumberBeforeMacroExpansion": 2,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "input2",
      },
    ],
    "instruction": "int",
    "isMemoryDeclaration": true,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 3,
    "lineNumberBeforeMacroExpansion": 3,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "isMemoryDeclaration": true,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 4,
    "lineNumberBeforeMacroExpansion": 4,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 8,
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 6,
    "lineNumberBeforeMacroExpansion": 6,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "input1",
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 7,
    "lineNumberBeforeMacroExpansion": 7,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "input2",
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 8,
    "lineNumberBeforeMacroExpansion": 8,
  },
  {
    "arguments": [],
    "instruction": "ensureNonZero",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 9,
    "lineNumberBeforeMacroExpansion": 9,
  },
  {
    "arguments": [],
    "instruction": "div",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 10,
    "lineNumberBeforeMacroExpansion": 10,
  },
  {
    "arguments": [],
    "instruction": "store",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 11,
    "lineNumberBeforeMacroExpansion": 11,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 13,
    "lineNumberBeforeMacroExpansion": 13,
  },
]
`;

exports[`div (int) > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    (local i32)
    i32.const 8
    i32.const 0
    i32.load
    i32.const 4
    i32.load
    local.set 0
    local.get 0
    i32.eqz
    if (result i32)  ;; label = @1
      i32.const 1
    else
      local.get 0
    end
    i32.div_s
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`div (int) > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "input1": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "id": "input1",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "input2": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "input2",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 8,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 2,
    "wordAlignedSize": 1,
  },
}
`;
